--- a/src/main/resources/com/customatics/leaptest_plugin/LeaptestJenkinsBridgeBuilder/help-address.html
+++ b/src/main/resources/com/customatics/leaptest_plugin/LeaptestJenkinsBridgeBuilder/help-address.html
@@ -1,3 +1,3 @@
 <div>
-Enter URL of your Leaptest Server like "http://control-win10:9000" or "http://control-win10:9000" for example, nothing more!
+Enter URL of your Leaptest Server like "http://control-win10:9000" or "http://localhost:9000" for example, nothing more!
 </div>
