--- a/src/main/resources/com/customatics/leaptest_plugin/LeaptestJenkinsBridgeBuilder/help-address.html
+++ b/src/main/resources/com/customatics/leaptest_plugin/LeaptestJenkinsBridgeBuilder/help-address.html
@@ -1,3 +1,3 @@
 <div>
-Enter URL of your Leaptest Server like "http://{your_Leaptest_server_name}:{your_Leaptest_server_port}" or "http://localhost:9000" for example, nothing more!
+Enter URL of your Leaptest Controller like "http://{hostname where Leaptest is intslled}:{your_Leaptest_controller_port (by default it is 9000)}" !
 </div>
