--- a/src/main/resources/com/customatics/leaptest_plugin/LeaptestJenkinsBridgeBuilder/help-leapworkSchNames.html
+++ b/src/main/resources/com/customatics/leaptest_plugin/LeaptestJenkinsBridgeBuilder/help-leapworkSchNames.html
@@ -1,4 +1,6 @@
 <div>
     Press button "Select schedules" and you will get all available schedules of your controller which address you've entered before.
     Use checkboxes to select the schedules you want.
+    Also you can paste list of schedule names, be noticed that they should be separated by new line or comma.
+    WARNING: by clicking a checkbox all schedule names, that DO NOT EXIST OR DISABLED on controller will be removed from the list of schedules in build configuration.
 </div>
